test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/goto_backwards.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  const int(0)
  )
  identifier(label)
  :
  return
  const int(5)
  ;
  goto
  identifier(label)
  ;
  return
  const int(0)
  ;
  }
