test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/extra_credit/label_outside_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  identifier(label)
  :
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
